--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
         <div class="marker red">
             <div class="cap"></div>
             <div class="sleeve">
-
             </div>
         </div>
         <div class="marker green">
-
+            <div class="cap"></div>
+            <div class="sleeve">
         </div>
         <div class="marker blue">
-
+            <div class="cap"></div>
+            <div class="sleeve">
         </div>
     </div>
 </body>
